<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UsersDB</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="aul_edicio_id">ID:</string>
    <string name="aul_edicio_nombre">Nombre:</string>
    <string name="aul_edicio_apeliidos">Apellidos:</string>
    <string name="aul_edicio_fechaNac">Fecha Nac:</string>
    <string name="aul_edicio_btnFechaNac">Fecha</string>

</resources>